# brain-blog

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.docker.md  README.md  app.py  blog_index_manager.py  blog_links_processor.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: app_settings.py  environment.example  nginx.conf  pipeline.example.yaml  pipeline.yaml
docs/: API_KEY_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  HEALTH_MONITORING.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  TESTING.md  VECTOR_STORES.md  WEBHOOK_SECURITY.md
openai_store/: anthropic_file_upload.py  anthropic_uploads.json  openai_vector_store.json  openai_vector_store.py
pipeline/: __init__.py  blog_generator.py  categorizer.py  image_generator.py  media_storage.py  meme_generator.py  pipeline_manager.py
prompts/blog_generation/: base.txt  security_style.txt  tech_style.txt  web3_style.txt
prompts/categorization/: main.txt
prompts/image_generation/: main.txt
prompts/meme_generation/: main.txt
providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  grok_provider.py  openai_provider.py
scripts/: prepare-distribution.sh  setup.sh
tests/: __init__.py  conftest.py  run_tests.py  test_all.py  test_app.py  test_blog_generation.py  test_complete_pipeline.py  test_config.py  test_image_fallbacks.py  test_integration.py  test_local.py  test_media_pipeline.py  test_pipeline.py  test_pipeline_components.py  test_providers.py  test_run_single_blog.py  test_utils.py  test_vector_store_integration.py  test_vector_stores.py
vector_store_docs/: braincargo_knowledge.txt  company_projects.txt  technical_guidelines.txt
